# profileportal/src/app/models/appointments.js
@@ -1,0 +1,49 @@
+const Sequelize = require('sequelize');
+module.exports = function(sequelize, DataTypes) {
+  return sequelize.define('appointments', {
+    id: {
+      autoIncrement: true,
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      primaryKey: true
+    },
+    topic: {
+      type: DataTypes.STRING(255),
+      allowNull: false
+    },
+    description: {
+      type: DataTypes.TEXT,
+      allowNull: true
+    },
+    status: {
+      type: DataTypes.STRING(50),
+      allowNull: true
+    },
+    created_by: {
+      type: DataTypes.STRING(255),
+      allowNull: true
+    },
+    create_date: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    create_time: {
+      type: DataTypes.TIME,
+      allowNull: true
+    }
+  }, {
+    sequelize,
+    tableName: 'appointments',
+    schema: 'public',
+    timestamps: false,
+    indexes: [
+      {
+        name: "appointments_pkey",
+        unique: true,
+        fields: [
+          { name: "id" },
+        ]
+      },
+    ]
+  });
+};
