# profileportal/src/app/models/comments.js
@@ -1,0 +1,57 @@
+const Sequelize = require('sequelize');
+module.exports = function(sequelize, DataTypes) {
+  return sequelize.define('comments', {
+    id: {
+      autoIncrement: true,
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      primaryKey: true
+    },
+    appointment_id: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      references: {
+        model: 'appointments',
+        key: 'id'
+      }
+    },
+    comment_name: {
+      type: DataTypes.STRING(255),
+      allowNull: false
+    },
+    comment_details: {
+      type: DataTypes.TEXT,
+      allowNull: true
+    },
+    create_date: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    create_by: {
+      type: DataTypes.STRING(255),
+      allowNull: true
+    },
+    update_date: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    update_by: {
+      type: DataTypes.STRING(255),
+      allowNull: true
+    }
+  }, {
+    sequelize,
+    tableName: 'comments',
+    schema: 'public',
+    timestamps: false,
+    indexes: [
+      {
+        name: "comments_pkey",
+        unique: true,
+        fields: [
+          { name: "id" },
+        ]
+      },
+    ]
+  });
+};
