# profileportal/src/app/models/update_history.js
@@ -1,0 +1,53 @@
+const Sequelize = require('sequelize');
+module.exports = function(sequelize, DataTypes) {
+  return sequelize.define('update_history', {
+    id: {
+      autoIncrement: true,
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      primaryKey: true
+    },
+    appointment_id: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      references: {
+        model: 'appointments',
+        key: 'id'
+      }
+    },
+    topic: {
+      type: DataTypes.STRING(255),
+      allowNull: false
+    },
+    description: {
+      type: DataTypes.TEXT,
+      allowNull: true
+    },
+    status: {
+      type: DataTypes.STRING(50),
+      allowNull: true
+    },
+    update_date: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    update_time: {
+      type: DataTypes.TIME,
+      allowNull: true
+    }
+  }, {
+    sequelize,
+    tableName: 'update_history',
+    schema: 'public',
+    timestamps: false,
+    indexes: [
+      {
+        name: "update_history_pkey",
+        unique: true,
+        fields: [
+          { name: "id" },
+        ]
+      },
+    ]
+  });
+};
